--- a/part1/1.13/Dockerfile
+++ b/part1/1.13/Dockerfile
@@ -4,9 +4,7 @@ WORKDIR /usr/src/app
 
 EXPOSE 8080
 
-ENV REQUEST_ORIGIN https://example.com
-
-ENV REDIS_HOST 6379
+ENV REQUEST_ORIGIN http://localhost:5000
 
 COPY . .
 
