--- a/part3/3.5/DockerfileFront
+++ b/part3/3.5/DockerfileFront
@@ -20,4 +20,12 @@ RUN npm run build
 
 RUN npm install -g serve
 
+RUN useradd -m appuser
+
+RUN chown -R appuser:appuser /usr/src/app
+
+RUN chmod -R u+rwx /usr/src/app
+
+USER appuser
+
 CMD ["serve", "-s", "-l", "5000", "build"]
